--- a/register.html
+++ b/register.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="asset/style/split.css">
     <link rel="stylesheet" href="asset/style/register.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+    <link rel="stylesheet" href="asset/style/socialmedia.css">
 	<style>
 		body {
 			font-family: 'Poppins';
 		}
 	</style>
 </head>
-<body style="margin: 0%;">
-    <nav>
+<body style="margin: 0;">
+    <nav class="navbar">
             <a href="https://neuronworks.co.id">                            
                 <img src="asset/picture/neuron_logo.png" alt="PT. Neuronworks Indonesia" style="width: 8rem;">
             </a>            
@@ -63,23 +64,52 @@
                     <div>
                         <button class="button" onclick="login()">Submit</button>
                     </div>
+                    <div>
+                        <ul class="center">
+                            <li class="display">
+                                <a href="https://id-id.facebook.com/">
+                                    <img src="asset/picture/icons8-facebook.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="display" style="margin-left: 2rem;">
+                                <a href="https://www.instagram.com/">
+                                    <img src="asset/picture/icons8-instagram.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="display" style="margin-left: 2rem;">
+                                <a href="https://twitter.com/login?lang=id">
+                                    <img src="asset/picture/icons8-twitter.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="display" style="margin-left: 2rem;">
+                                <a href="https://www.youtube.com/?hl=id&gl=ID">
+                                    <img src="asset/picture/icons8-youtube.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="center">
+                            <a href="https://www.neuronworks.co.id" class="senterterang">
+                                www.neuronworks.co.id
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        <script>
-            function login() {
-              var nama = document.getElementById("nama").value;
-              var email = document.getElementById("email").value;
-              var telp = document.getElementById("telp").value;
-              var picklist = document.getElementById("picklist").value;
-              var picklist2 = document.getElementById("picklist2").value;
-              if (nama != "" && email != "" && telp != "" && picklist != "" && picklist2 != "") {
-                alert("Login successful!");
-              } else {
-                alert("Data Tidak Boleh Kosong");
-              }
-            }
-          </script>
         </div>
       </div>
+      <script>
+        function login() {
+          var nama = document.getElementById("nama").value;
+          var email = document.getElementById("email").value;
+          var telp = document.getElementById("telp").value;
+          var picklist = document.getElementById("picklist").value;
+          var picklist2 = document.getElementById("picklist2").value;
+          if (nama != "" && email != "" && telp != "" && picklist != "" && picklist2 != "") {
+            alert("Login successful!");
+          } else {
+            alert("Data Tidak Boleh Kosong");
+          }
+        }
+      </script>
 </body>
 </html>
